-issue#5342: Increase keyup delay when searching the tree
-issue#5347: Device form location drop down not populating
-issue#5354: Realtime graphs can report undefined variable
-issue#5355: SNMP Uptime is not always ignored for spikekills
-issue#5356: Improve downed Device detection
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2

1.2.24
-issue#5127: Unable to import Local Linux Machine template
-issue#5134: Maximum Memory shows -1 instead of Unlimited
-issue#5135: RRDcleaner and RRDcheck share the same filter details causing errors
-issue#5136: When passed a null value, number_format_i18n() can return a invalid number by ddb4github
-issue#5137: When attempting to update structured paths, SQL errors can occur
-issue#5140: Compatibility changes for SNMP under PHP 8.2
-issue#5142: Fix issues with permission model and warnings
-issue#5143: When a Device has zero Graphs or Data Sources, it does not display a value
-issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
-issue#5147: Language handlers may not always be loaded properly
-issue#5150: Wrong parameters are shown for the Import Package script
-issue#5151: Templates appear to lose their suggested name values
-issue#5159: When editing a tree, the tree can not be set to published
-issue#5160: Translations on debian 'bookworm' systems may cause server errors
-issue#5161: Switching language in the settings does not immediately become active
-issue#5166: Plugin permissions may sometimes appear in the wrong section by ddb4github
-issue#5167: Graph template for NetSNMP lmsensors missing
-issue#5168: Import Package is misleading when reviewing Device Template Changes
-issue#5169: Device failure and recovery dates can be misleading
-issue#5170: Prevent remote polling functionality from running on main poller
-issue#5174: When adding a new device, location is not being saved
-issue#5180: Audit Database has issues with storage engine compare